--- a/DeepLearning-Actions/05-transformer.ipynb
+++ b/DeepLearning-Actions/05-transformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "terminal-riding",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
      "text": [
       "package版本信息：\n",
       "numpy:       1.21.5\n",
-      "PyTorch:      1.2.0\n"
+      "PyTorch:      1.12.1\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
     "from torch import nn, optim\n",
     "\n",
     "from IPython.display import display\n",
-    "plt.style.use(\"ggplot\")\n",
+    "# plt.style.use(\"ggplot\")\n",
     "\n",
     "print(\"package版本信息：\")\n",
     "print(\"numpy:      \", np.__version__)\n",
@@ -509,6 +509,7 @@
     "  + `local_files_only`，bool，指定是否只使用本地模型\n",
     "  + `mirror`，指定下载的镜像地址\n",
     "\n",
+    "> **`PretrainedConfig`类及其子类，可以直接用于实例化各种模型，但是不能用于实例化预处理类（比如Tokenizer）**.\n",
     "\n",
     "+ `.save_pretrained()`，导出训练好模型的 config/model/tokenizer\n",
     "\n",
@@ -577,6 +578,8 @@
     "\n",
     "`PreTrainedTokenizer`类虽然有实例化参数，但是通常会**使用`.from_pretrained()`方法从文件中读取配置，生成对应的Tokenizer对象**。  \n",
     "\n",
+    "注意，**Tokenizer类不能使用`PreTrainedConfig`类及其子类来实例化**。\n",
+    "\n",
     "通常该对象会有如下属性：\n",
     "+ `name_or_path`：读取的配置路径\n",
     "+ `vocab_file_names`：字典文件名\n",
@@ -613,7 +616,7 @@
     "  + `str`，单个句子\n",
     "  + `List[str]`，多个句子。注意，如果这里是 list of word 的形式，那么需要设置`is_split_into_words=True`。\n",
     "  + `List[List[str]]`，一个batch的句子\n",
-    "+ `text_pair`，输入的文本对，可接受的输入类型同`text`\n",
+    "+ `text_pair`，**可选**，可接受的输入类型同`text`，**这里传入的句子会和 `text` 里的句子组成一对**。\n",
     "+ `max_length`：设置可接受的最大句子长度\n",
     "+ `padding`，补全策略，有如下几种输入：\n",
     "  + `True` or `longest`，使用padding，此时按照最长的句子进行padding\n",
@@ -631,7 +634,7 @@
     "  + `input_ids`，分词后每个 token 对应 vocabulary 的 index —— 这个被**作为输入模型的数据**.\n",
     "  + `attention_mask`，表明填充的 token 位置，**填充位的 token 对应于 0**.  \n",
     "  因为一个batch中不同的句子长度不一样，短一些的句子会被padding成同样的长度，此时这些padding的位置需要被记录下来，用于告知模型这部分只是填充使用，不需要参与self-attention。\n",
-    "  + `token_type_ids`：通常用于问答对的句子中，它也是一个{0,1}掩码的形式，0表示属于问题的句子，1表示属于答案的句子"
+    "  + `token_type_ids`：通常用于**问答对**的句子中，它也是一个{0,1}掩码的形式，0表示属于问题的句子，1表示属于答案的句子"
    ]
   },
   {
@@ -640,7 +643,8 @@
    "metadata": {},
    "source": [
     "#### `tokenize()`\n",
-    "将文本转换成分词后的 tokens，返回的是 `List[str]`，表示的是文本对应 **分词后** 的 tokens .\n",
+    "将文本转换成分词后的 tokens，返回的是 `List[str]`，表示的是文本对应 **分词后** 的 tokens .  \n",
+    "注意，**这个不能处理句子对，只能处理单个句子**！\n",
     "\n",
     "  \n",
     "#### `encode()`\n",
@@ -670,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6e5ceb1c-c54d-4398-9323-d37ef43e46fb",
    "metadata": {},
    "outputs": [
@@ -678,7 +682,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:\\Project-Workspace\\Python-Projects\\DataAnalysis\n"
+      "/Users/danielzhang/Documents/Python-Projects/DataAnalysis\n"
      ]
     }
    ],
@@ -688,17 +692,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "insured-place",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'D:\\\\Project-Workspace\\\\Python-Projects\\\\DataAnalysis'"
+       "'/Users/danielzhang/Documents/Python-Projects/DataAnalysis'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,44 +713,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "cdc19405-01f0-4f7d-9f4e-da2cab7c115a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\Miniconda3\\envs\\deep-learning\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "The cache for model files in Transformers v4.22.0 has been updated. Migrating your old cache. This is a one-time only operation. You can interrupt this and resume the migration later on by calling `transformers.utils.move_cache()`.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moving 0 files to the new cache system\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0it [00:00, ?it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 导入 BERT tokenizer 的设置\n",
     "from transformers import BertTokenizer\n",
-    "model_path = r\"bert-pretrained-models\\bert-base-uncased\"\n",
+    "# model_path = r\"bert-pretrained-models\\bert-base-uncased\" # windows\n",
+    "model_path = r\"bert-pretrained-models/bert-base-uncased\" # mac\n",
     "tokenizer = BertTokenizer.from_pretrained(pretrained_model_name_or_path=model_path, local_files_only=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "eaf330e3-c290-487a-998c-0aa5283dc1ca",
    "metadata": {},
    "outputs": [
@@ -761,23 +742,24 @@
    "source": [
     "# 查看分词表大小\n",
     "print(\"tokenizer.vocab_size: \", tokenizer.vocab_size)\n",
+    "\n",
     "# 查看分词器所使用的的词表， 这个打印会很长\n",
     "# tokenizer.vocab"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "558bdd8f-dc26-470a-979e-67472fdf8bb4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<transformers.models.bert.tokenization_bert.BasicTokenizer at 0x1e642f8ab48>"
+       "<transformers.models.bert.tokenization_bert.BasicTokenizer at 0x123fa74d0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "c0b9056f-154d-46b1-aeea-81d0b9b00355",
    "metadata": {},
    "outputs": [
@@ -804,6 +786,7 @@
     }
    ],
    "source": [
+    "# 查看特殊的 tokens 和对应的 id\n",
     "print(tokenizer.all_special_tokens, ':', tokenizer.all_special_ids)\n",
     "print(tokenizer.cls_token, ': ',tokenizer.cls_token_id)\n",
     "print(tokenizer.mask_token, ': ', tokenizer.mask_token_id)\n",
@@ -811,8 +794,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5e9b80d2-264b-4e78-82b3-9a917af15c07",
+   "metadata": {},
+   "source": [
+    "+ 对单个句子或者一个batch的句子进行分词  \n",
+    "此时所有句子分词后得到的`token_type_ids` 都是0，表示它们都是同一个句子。"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "fb467534-a310-4669-86ab-9c0484d106d0",
    "metadata": {},
    "outputs": [
@@ -900,6 +892,91 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b9b0cc47-bc49-4a25-95b2-ceb5cf1fbedf",
+   "metadata": {},
+   "source": [
+    "+ 对**成对句子**进行分词  \n",
+    "此时`toke_type_ids`就起作用了。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ed433250-3718-4b55-a87e-c244c13821c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_ids :  [101, 2023, 2003, 1037, 2460, 6251, 102, 2023, 2003, 1037, 2738, 2936, 5537, 102]\n",
+      "token_type_ids :  [0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1]\n",
+      "attention_mask :  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = \"this is a short sentence\"\n",
+    "s2 = \"This is a rather longer sequence\"\n",
+    "\n",
+    "# 注意，此时传入的方式，不是 list，这两个句子作为一个样本，第一个是 text, 第二个是 text_pair\n",
+    "batch_encoding = tokenizer(text=s1, text_pair=s2, padding=True)\n",
+    "print('input_ids : ', batch_encoding['input_ids'])\n",
+    "print('token_type_ids : ', batch_encoding['token_type_ids'])\n",
+    "print('attention_mask : ', batch_encoding['attention_mask'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "4c9bf0f4-89cb-4e37-913c-85d64e49769b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[CLS] this is a short sentence [SEP] this is a rather longer sequence [SEP]'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.decode(batch_encoding['input_ids'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "04d7b926-1304-4ffe-a8e6-4686f5d88556",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_ids :  [[101, 2023, 2003, 1037, 2460, 6251, 102, 2023, 2003, 1037, 2738, 2936, 5537, 102], [101, 2023, 2003, 1037, 2460, 6251, 102, 2023, 2003, 1037, 2738, 2936, 5537, 102]]\n",
+      "token_type_ids :  [[0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1], [0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1]]\n",
+      "attention_mask :  [[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 传入一个batch的句子对\n",
+    "text_batch = [s1, s1]\n",
+    "text_pair_batch = [s2, s2]\n",
+    "\n",
+    "batch_encoding = tokenizer(text=text_batch, text_pair=text_pair_batch, padding=True)\n",
+    "\n",
+    "print('input_ids : ', batch_encoding['input_ids'])\n",
+    "print('token_type_ids : ', batch_encoding['token_type_ids'])\n",
+    "print('attention_mask : ', batch_encoding['attention_mask'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "53b661f1-b46f-4ad2-8e76-b9b323f14f64",
    "metadata": {
     "tags": []
@@ -959,6 +1036,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d52a45b4-81c8-450e-b8a3-e74591fe8cde",
+   "metadata": {},
+   "source": [
+    "#### BertConfig\n",
+    "\n",
+    "官方文档 [BertConfig](https://huggingface.co/docs/transformers/model_doc/bert#transformers.BertConfig).   \n",
+    "封装了Bert的配置"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "17e9b179-2e30-469d-94e4-abdef55e8787",
    "metadata": {},
    "source": [
@@ -966,16 +1054,32 @@
     "\n",
     "huggingface-transformer的实现里，除了上述几个可以直接用于任务的模型类之外，还有一些底层的实现类没有对外暴露，这些实现类是上述模型的基础。\n",
     "\n",
-    "+ `BertEmbeddings`：用于将输入的 input_ids 转成词向量\n",
-    "+ `BertSelfAttention`：实现transformer的 self-attention 操作，也就是 ${\\rm softmax}(\\frac{ {\\rm query} * {\\rm key}^T}{\\sqrt{d_k}} * {\\rm value})$ 这一部分\n",
+    "+ `BertEmbeddings`：\n",
+    "  + 用于将输入的 input_ids 转成词向量\n",
+    "  + 也将 `token_type_ids` 转成了向量\n",
+    "\n",
+    "\n",
+    "+ **`BertSelfAttention`-KEY**：\n",
+    "  + 实现transformer的 self-attention 操作，也就是 ${\\rm softmax}(\\frac{ {\\rm query} * {\\rm key}^T}{\\sqrt{d_k}} * {\\rm value})$ 这一部分.  \n",
+    "  + 这里的self-attention操作，既可以是 encoder 里的 self-attention，也可以是 decoder 里的 self-attention\n",
+    "  + 如果是 decoder 里的 self-attention，又分为两种情况：\n",
+    "    + decoder的 Masked-self-attention（第一层），此时 q,k,v 都来自于输出序列的同一个\n",
+    "    + decoder的 cross-self-attention（第二层），此时 q,k 来自于 encoder 的输出，v 来自于上一层的 encoder\n",
+    "  + 为了兼容上述3种情况，它的`forward`方法里，可以传入的参数很多，用于控制具体实现哪里的self-attention.\n",
+    "\n",
+    "\n",
     "+ `BertSelfOutput`：实现transformer里的 self-attention 之后的 LayerNorm(output + Feedfoward(output)) 操作\n",
     "+ `BertAttention`：封装了 `BertSelfAttention` + `BertSelfOutput`，构成 transformer 里的单独一层\n",
     "+ `BertIntermediate`: 内部是一个 linear 层 + 激活函数\n",
     "+ `BertOutput`：这个和 `BertSelfOutput` 似乎没什么区别\n",
+    "\n",
+    "\n",
     "+ **`BertLayer`**-KEY：封装了 `BertAttention` + `BertIntermediate` + `BertOutput`，这个类比较重要.  \n",
     "  它提供了如下两个参数：\n",
     "  + `config.is_decoder`：为 True 时，作为 decoder 使用，输出 decoder 的结果，否则作为 encoder 使用，输出 encoder 的隐藏层状态\n",
-    "  + `config.add_cross_attention`：为 True 时，会再添加一个 `BertAttention` 层，用于 Seq2Seq 模型中\n",
+    "  + `config.add_cross_attention`：为 True 时，会再添加一个 `BertAttention` 层（decoder内部中间的self-attention层），用于 Seq2Seq 模型中\n",
+    "\n",
+    "\n",
     "+ `BertEncoder`：内部是多个 `BertLayer` 层\n",
     "+ `BertPooler`：内部是一个 全连接层 + tanh激活函数"
    ]
@@ -987,11 +1091,10 @@
    "source": [
     "#### BertModel\n",
     "\n",
-    "最基本的BERT架构，既可以作为 transformer-encoder使用，也可以作为 transformer-decoder 使用，输出原始的隐藏层状态。\n",
+    "最基本的BERT架构，既可以作为 transformer-encoder 使用，也可以作为 transformer-decoder 使用，输出原始的隐藏层状态。\n",
     "\n",
     "查看源码时，会发现它的初始化方法里，有3个层：\n",
     "1. `self.embeddings = BertEmbeddings(config)`  \n",
-    "这一层用于将输入的input_ids转成对应的词向量，底层调用的是`nn.Embedding`\n",
     "2. `self.encoder = BertEncoder(config)`  \n",
     "这一层内部是`self.layer = nn.ModuleList([BertLayer(config) for _ in range(config.num_hidden_layers)])`，其中的`BertLayer`\n",
     "3. `self.pooler = BertPooler(config) if add_pooling_layer else None`\n",
@@ -1007,20 +1110,22 @@
     "\n",
     "+ 前向传播方法：  \n",
     "`forward(input_ids=None, attention_mask=None, token_type_ids=None, position_ids=None, head_mask=None, inputs_embeds=None, encoder_hidden_states=None, encoder_attention_mask=None, past_key_values=None, use_cache=None, output_attentions=None, output_hidden_states=None, return_dict=None)`\n",
-    "  + input_ids\n",
-    "  + attention_mask\n",
-    "  + token_type_ids\n",
-    "  + position_ids\n",
-    "  + head_mask\n",
-    "  + inputs_embeds\n",
-    "  + encoder_hidden_states\n",
-    "  + encoder_attention_mask\n",
-    "  + past_key_values\n",
-    "  + output_attentions\n",
-    "  + output_hidden_states\n",
+    "  + `input_ids`：`shape=(batch_size, sequence_length)`，每个sequence是一个 list of int，其中每个值是该word在词典中的indice，经过embedding层之后，每个word的indice会被转换成word embedding的词向量。\n",
+    "  + `attention_mask`，用于表示该位置的词语是否需要be attended，主要是处理padding的词语，这些padding的词语不需要参与计算。\n",
+    "  + `token_type_ids`，用于区分成对句子中两个句子，为 {0, 1} 掩码\n",
+    "  + `position_ids`，位置编码，可选\n",
+    "  + `head_mask`，\n",
+    "  + `inputs_embeds`，输入的embedding向量，`shape=(batch_size, sequence_length, hidden_size)`，如果不想传入`input_ids`经过内部的`BertEmbedding`转成向量，就可以在这里传入自定义的embedding表示向量。\n",
+    "  + `encoder_hidden_states`，作为decoder里的cross-attention使用时，需要的encoder输出就从这个参数传入\n",
+    "  + `encoder_attention_mask`，\n",
+    "  + `past_key_values`，包含了前一个attention block了计算的 key 和 value —— 这个参数的使用有点迷惑。\n",
+    "  + `output_attentions`，是否输出所有attention layer 的结果，默认 False\n",
+    "  + `output_hidden_states`，是否输出所有attention layer的隐藏层状态，默认 False\n",
     "\n",
-    "+ `forward()`方法返回的是`BaseModelOutputWithPoolingAndCrossAttentions`类对象（在`return_dict=True`时），它有如下属性：\n",
-    "  + `last_hidden_state`，shape=`(batch_size, sequence_length, hidden_size)`，最后一层的隐状态\n",
+    "\n",
+    "`forward()`方法的返回值是如下的对象（在`return_dict=True`时）：\n",
+    "+ `BaseModelOutputWithPoolingAndCrossAttentions`类对象，它有如下属性：\n",
+    "  + `last_hidden_state`，shape=`(batch_size, sequence_length, hidden_size)`，最后一层的输出\n",
     "  + `pooler_output`，shape=`(batch_size, hidden_size)`，最后一层中 `[CLS]` token 对应的输出\n",
     "  + `hidden_states`，只有当`output_hidden_states=True`时才会返回.  \n",
     "  返回的是一个 长度=13 的tuple, 每个元素对应于一层的隐状态（包括了 Embedding 层），每层的隐状态 shape=`(batch_size, sequence_length, hidden_size)`\n",
@@ -1655,7 +1760,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "deep-learning(Python 3.7)",
+   "display_name": "deep-learning(Python3.7.13)",
    "language": "python",
    "name": "deep-learning"
   },
