huggingface-transformer BERT的代码实现框架总结

--- a/DeepLearning-Actions/05-transformer.ipynb
+++ b/DeepLearning-Actions/05-transformer.ipynb
@@ -1047,16 +1047,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17e9b179-2e30-469d-94e4-abdef55e8787",
+   "id": "c49445f6-1524-4db2-bb2f-5333ecff5fc5",
    "metadata": {},
    "source": [
     "#### 底层实现类\n",
     "\n",
     "huggingface-transformer的实现里，除了上述几个可以直接用于任务的模型类之外，还有一些底层的实现类没有对外暴露，这些实现类是上述模型的基础。\n",
     "\n",
+    "<img src=\"images/transformer-bert.png\" width=\"50%\" align=\"center\">    \n",
+    "\n",
+    "\n",
     "+ `BertEmbeddings`：\n",
-    "  + 用于将输入的 input_ids 转成词向量\n",
-    "  + 也将 `token_type_ids` 转成了向量\n",
+    "  + 用于将输入的 `input_ids`，`token_type_ids`，`position_ids` 转成词向量，并进行相加（原论文中是这么做的）\n",
     "\n",
     "\n",
     "+ **`BertSelfAttention`-KEY**：\n",
@@ -1066,22 +1068,69 @@
     "    + decoder的 Masked-self-attention（第一层），此时 q,k,v 都来自于输出序列的同一个\n",
     "    + decoder的 cross-self-attention（第二层），此时 q,k 来自于 encoder 的输出，v 来自于上一层的 encoder\n",
     "  + 为了兼容上述3种情况，它的`forward`方法里，可以传入的参数很多，用于控制具体实现哪里的self-attention.\n",
+    "  + 输出最多为 长度=3 的 tuple：`(context_layer, attention_probs, past_key_value)`\n",
+    "    + `context_layer` 是 self-attention 最后的计算结果\n",
+    "    + `attention_probs` 是 ${\\rm softmax}(\\frac{ {\\rm query} * {\\rm key}^T}{\\sqrt{d_k}})$ 的结果\n",
+    "    + `past_key_value` 是一个 长度=2 的 tuple：`(key, value)`，存放的是 decoder 中第二层的 cross-self-attention 需要传入的 key,value.\n",
     "\n",
     "\n",
-    "+ `BertSelfOutput`：实现transformer里的 self-attention 之后的 LayerNorm(output + Feedfoward(output)) 操作\n",
-    "+ `BertAttention`：封装了 `BertSelfAttention` + `BertSelfOutput`，构成 transformer 里的单独一层\n",
-    "+ `BertIntermediate`: 内部是一个 linear 层 + 激活函数\n",
-    "+ `BertOutput`：这个和 `BertSelfOutput` 似乎没什么区别\n",
+    "+ `BertSelfOutput`：实现transformer里的 self-attention 之后的 **Add & Norm** 操作\n",
+    "  \n",
+    "+ `BertAttention`：封装了 `BertSelfAttention` + `BertSelfOutput`，形成一个 **Attention** 层\n",
+    "  + 输出：和 `BertSelfAttention` 相同，只是对 `context_layer` 进行了 Add & Norm 处理，其他保持不变\n",
     "\n",
     "\n",
-    "+ **`BertLayer`**-KEY：封装了 `BertAttention` + `BertIntermediate` + `BertOutput`，这个类比较重要.  \n",
+    "+ `BertIntermediate`: 内部是一个 linear 层 + 激活函数，也就是 Attention 层后面的 **FeedForward** 全连接层\n",
+    "+ `BertOutput`：这个和 `BertSelfOutput` 没有区别，只是为了实现 FeedForward 层后面的 **Add & Norm** 操作\n",
+    "\n",
+    "\n",
+    "+ **`BertLayer`-KEY**：封装了 `BertAttention` + `BertAttention`(可选) +  `BertIntermediate` + `BertOutput`，构成 encoder 或者 decoder 里的一层.    \n",
     "  它提供了如下两个参数：\n",
     "  + `config.is_decoder`：为 True 时，作为 decoder 使用，输出 decoder 的结果，否则作为 encoder 使用，输出 encoder 的隐藏层状态\n",
-    "  + `config.add_cross_attention`：为 True 时，会再添加一个 `BertAttention` 层（decoder内部中间的self-attention层），用于 Seq2Seq 模型中\n",
+    "  + `config.add_cross_attention`：为 True 时，会再添加一个 `BertAttention` 层，也就是 decoder 内部中间的 self-attention 层，称为 **cross-attention**   \n",
+    "  \n",
+    "  输出：长度=4 的tuple: `(context_layer, attention_probs, cross_attention_probs, past_key_value)`\n",
+    "  + `context_layer` 是 输出的状态向量，它可能经过了两个 `BertAttention` 层\n",
+    "  + `attention_probs` 是第一个 `BertAttentnion` 层的输出\n",
+    "  + `cross_attention_probs` 是第二个 `BertAttentnion`(cross-attention) 层输出的\n",
+    "  + `past_key_value` 现在可能是一个 长度=4 的tuple: `(key, value, cross_attention_key, cross_attention_value)`，前两个是第一个self-attention的输出，后两个是 cross-attention的输出.\n",
     "\n",
     "\n",
-    "+ `BertEncoder`：内部是多个 `BertLayer` 层\n",
-    "+ `BertPooler`：内部是一个 全连接层 + tanh激活函数"
+    "+ `BertEncoder`：内部是多个作为 encoder 使用的 `BertLayer` 层   \n",
+    "输出是一个 `BaseModelOutputWithPastAndCrossAttentions` 类，里面封装了如下结果：\n",
+    "  + `last_hidden_state`：最后一个 encoder 的输出，也就是最后的 `context_layer`\n",
+    "  + `hidden_states`：以 tuple 的形式记录了所有 encoder 的输出\n",
+    "  + `attentions`：以 tuple 的形式记录了所有 encoder 的 `attention_probs`\n",
+    "  + `cross_attentions`: 以 tuple 的形式记录了所有decoder的 `cross_attention_probs`\n",
+    "  + `past_key_values`：以 tuple 的形式记录了所有decoder的 `past_key_value`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83326319-0d1b-4a8a-a806-d203f2c07454",
+   "metadata": {},
+   "source": [
+    "除了上述属于 transformer 架构的组件类，还提供了一些专门用于 BERT 架构的输出组件类。\n",
+    "\n",
+    "+ `BertPooler`：内部是一个 linear + tanh激活函数，也就是一个全连接层，但是它只会处理 `BertLayer` 输出的第一个 token 的隐藏层状态。   \n",
+    "对应 BERT 的 Masked-Language-Model 训练方式里，第一个 token `[CLS]` 的输出，**它不会改变隐藏层状态向量的维度**.\n",
+    "\n",
+    "+ `BertPredictionHeadTransform`：内部是一个 全连接层(linear+激活函数) + LayerNorm，它会处理 `BertLayer` 输出的所有序列的隐藏层状态，相当于对 `BertLayer` 或者 `BertEncoder` 的输出做一次 FeedForward 处理，它**不会改变隐藏层状态向量的维度**。\n",
+    "\n",
+    "+ `BertLMPredictionHead`：内部是一个 `BertPredictionHeadTransform` + linear，其中线性变换会改变隐藏层向量维度：`hidden_size` --> `vocab_size`。  \n",
+    "名称中的\"LM\"应该指的是Language Model，也就是说这一层是为了用于语言模型对transformer-encoder的输出进行的变换。\n",
+    "\n",
+    "+ `BertOnlyMLMHead`：内部就是 `BertLMPredictionHead`，没有加其他的操作。  \n",
+    "专门用于使用 Masked-Language-Model(MLM) 方式训练时获取transformer-encoder的输出。\n",
+    "\n",
+    "+ `BertOnlyNSPHead`：内部是一个 linear变换，但是维度从 `hidden_size` -> 2。   \n",
+    "专门用于使用 Next Sentence Prediction(NSP) 方式训练时将第一个token `[CLS]` 转成一个 表示二分类结果的向量。  \n",
+    "它前面通常会有一个 `BertPooler` 层，用于获取第一个token `[CLS]` 的隐藏层状态向量。\n",
+    "\n",
+    "+ `BertPreTrainingHeads`：内部是 `BertLMPredictionHead` + 等价于`BertOnlyNSPHead`的linear变换.  \n",
+    "这个应该是用于同时采用 MLM + NSP 方式训练BERT时，同时获取两者的输出.\n",
+    "\n",
+    "有了上述的 transformer 基础组件类 和 BERT 组件类的支持，就可以构建下面使用的 BERT 模型了。"
    ]
   },
   {
@@ -1091,7 +1140,7 @@
    "source": [
     "#### BertModel\n",
     "\n",
-    "最基本的BERT架构，既可以作为 transformer-encoder 使用，也可以作为 transformer-decoder 使用，输出原始的隐藏层状态。\n",
+    "最基本的BERT架构，既可以作为 transformer-encoder 或者 transformer-decoder 使用，输出原始的隐藏层状态。\n",
     "\n",
     "查看源码时，会发现它的初始化方法里，有3个层：\n",
     "1. `self.embeddings = BertEmbeddings(config)`  \n",
@@ -1126,15 +1175,15 @@
     "`forward()`方法的返回值是如下的对象（在`return_dict=True`时）：\n",
     "+ `BaseModelOutputWithPoolingAndCrossAttentions`类对象，它有如下属性：\n",
     "  + `last_hidden_state`，shape=`(batch_size, sequence_length, hidden_size)`，最后一层的输出\n",
-    "  + `pooler_output`，shape=`(batch_size, hidden_size)`，最后一层中 `[CLS]` token 对应的输出\n",
+    "  + `pooler_output`，shape=`(batch_size, hidden_size)`，最后一层中 `[CLS]` token 对应的输出，经过了 `BertPooler` 的处理\n",
     "  + `hidden_states`，只有当`output_hidden_states=True`时才会返回.  \n",
     "    + 返回的是一个 长度= 1 + hidden_layers_num 的tuple, 每个元素对应于一层的隐状态（包括了 Embedding 层），\n",
     "    + 每层的隐状态 shape=`(batch_size, sequence_length, hidden_size)`\n",
     "  + `attentions`，只有当`output_attentions=True`时才会返回.  \n",
-    "    + 返回一个 长度=hidden_layers_num 的tuple，对应于 每一层 的attention，\n",
+    "    + 返回一个 长度=hidden_layers_num 的tuple，对应于 每一层 的attention，也就是 `BertSelfAttention` 输出的 `attention_probs`\n",
     "    + 每一层的attention.shape=`(batch_size, num_heads, sequence_length, sequence_length)`，\n",
     "  + `cross_attentions`，只有当`output_attentions=True`时才会返回.  \n",
-    "    + 返回一个 长度=hidden_layers_num 的tuple，对应于 每一层 的attention，\n",
+    "    + 返回一个 长度=hidden_layers_num 的tuple，对应于 每一层 的 cross-attention，也就是 `BertLayer`里设置`add_cross_attention=True`时输出的`cross_attention_probs`\n",
     "    + 每一层的attention.shape=`(batch_size, num_heads, sequence_length, sequence_length)`\n",
     "  + `past_key_values`，只有当`use_cache=True` 时才会返回\n",
     "  \n",
