--- a/DeepLearning-Actions/05-transformer.ipynb
+++ b/DeepLearning-Actions/05-transformer.ipynb
@@ -3051,7 +3051,11 @@
     "\n",
     "config = BertConfig.from_pretrained(model_name, local_files_only=True)\n",
     "tokenizer = BertTokenizer.from_pretrained(pretrained_model_name_or_path=model_name, local_files_only=True)\n",
-    "model = BertModel.from_pretrained(model_name, local_files_only=True)\n",
+    "# 使用 config 对象初始化 BERT模型，但是不能 config 来初始化 tokenizer\n",
+    "model = BertModel(config)\n",
+    "# 或者\n",
+    "# model = BertModel.from_pretrained(model_name, local_files_only=True)\n",
+    "\n",
     "\n",
     "print(\"config.__class__:    \", config.__class__)\n",
     "print(\"tokenizer.__class__: \", tokenizer.__class__)\n",
@@ -3681,9 +3685,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Deep-Learning-Env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "deep-learning"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
